@startuml
title Class view — Consent-first regional aggregation

skinparam backgroundColor #FFFDF7
skinparam shadowing false
skinparam defaultFontName Arial
skinparam defaultFontColor #18352F
skinparam ArrowColor #2F6F67
skinparam packageBorderColor #477B73
skinparam packageBackgroundColor #EEF6F3
skinparam rectangleBorderColor #477B73
skinparam rectangleBackgroundColor #FFFFFF
skinparam componentBorderColor #8A5A1F
skinparam componentBackgroundColor #FFF6E6
skinparam databaseBorderColor #4E668E
skinparam databaseBackgroundColor #EEF3FB
skinparam actorBorderColor #18352F
skinparam actorBackgroundColor #FFFFFF
skinparam classBorderColor #477B73
skinparam classBackgroundColor #FFFFFF
skinparam sequenceBoxBorderColor #477B73
skinparam sequenceBoxBackgroundColor #F4F8F6
skinparam ParticipantBorderColor #477B73
skinparam ParticipantBackgroundColor #FFFFFF
skinparam BoxPadding 10
hide stereotype

left to right direction
package "Reconciliation Through Relationships application" {
  package "Consent-first regional aggregation structure" {
    interface "Repository" as type0 {
      +listMappableParticipants()
      +listRegions()
    }
    
    class "MockRepository" as type1 {
      -participants: ParticipantProfile[]
      +listMappableParticipants()
      +listRegions()
    }
    
    class "ParticipantProfile" as type2 {
      +location: GeoLocation
      +consentToMap: boolean
      +learningStatus
    }
    
    class "GeoLocation" as type3 {
      +city
      +province
      +lat?
      +lng?
    }
    
    class "Region" as type4 {
      +key
      +city
      +province
      +eligibleCount
      +canFormCohort
    }
  }
}
type1 --> type0 : implements
type1 --> type2 : filters
type2 --> type3 : contains
type1 --> type4 : aggregates
legend bottom
  Class = implementation component or value shape
  Interface = public TypeScript contract
  Entity = persisted or domain data record
endlegend
@enduml
